Remove waste data